# agentx

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  PROMPT_build.md  PROMPT_plan.md  TASK.md  litellm-config.yaml  pyproject.toml  ralph.sh  secrets.env.example  send_self_task.py  summarize_sessions.py  vps-compose.yml
6a/02d56d66cc/: metadata.json
6a/02d56d66cc/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
6a/02d56d66cc/1/: full.jsonl  metadata.json
6a/02d56d66cc/2/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
6a/02d56d66cc/3/: content_hash.txt  full.jsonl  metadata.json
71/137acbbeb5/: metadata.json
71/137acbbeb5/0/: content_hash.txt  metadata.json  prompt.txt
71/137acbbeb5/1/: content_hash.txt  full.jsonl  metadata.json
7b/89230fa3a6/: metadata.json
7b/89230fa3a6/0/: content_hash.txt  full.jsonl  metadata.json
7e/9331416441/: metadata.json
7e/9331416441/0/: content_hash.txt  full.jsonl  metadata.json
92/56909abc41/: metadata.json
9d/6389c26dc6/: metadata.json
c2/b3884ae371/: metadata.json
d5/c062c0451b/: metadata.json
f9/cd3b620c93/: metadata.json
lib/: output-formatter.js  session-logger.js
logs/sessions/: 20260518-002456.json  20260518-004418.json  20260518-005610.json  20260518-024301.json  20260518-153831.json  20260518-161547.json  20260518-164009.json  20260518-164838.json
specs/: agent-harness.md  email-listener.md  entire-observability.md  local-models-task.md  local-models.md  vps-setup.md
src/: listener.py  send_task.py
src/tests/: test_listener.py  test_send_task.py
(+48 files in other folders)
