[project]
name = "agentx"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "aioimaplib>=2.0.0",
    "aiosmtplib>=3.0.0",
    "mistletoe>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
python_version = "3.14"

[[tool.mypy.overrides]]
module = "aioimaplib.*"
ignore_missing_stubs = true

[[tool.mypy.overrides]]
module = "src.tests.test_send_task"
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/tests"]
pythonpath = ["src"]
